# NeuralNetworkExample

./: .gitignore  CMakeLists.txt  NNTester  README.md  main  main.cpp
include/: activationfunc2.h  dataset.h  eigen_matrix_io.h  general.h  layer2.h  neuralnetwork2.h
resources/: data1  weights
src/: CMakeLists.txt  activationfunc2.cpp  dataset.cpp  general.cpp  layer2.cpp  neuralnetwork2.cpp
